add mongo atls url

--- a/backend/config/uat.env
+++ b/backend/config/uat.env
@@ -1,5 +1,5 @@
 PORT=3400
-mongoURI=mongodb://127.0.0.1:27017/storefleet2k24
+mongoURI=mongodb+srv://rahuljajoria2412:Radharahul@cluster0.nxeid.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0/storefleet2k24
 JWT_Secret=storefleetbyvivek
 JWT_Expire=1d
 COOKIE_EXPIRES_IN=1
